--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.datasource.url = jdbc:mysql://localhost/vendas?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username = root
+spring.datasource.password =
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.hibernate.ddl-auto = create
