--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url = jdbc:mysql://localhost/vendas?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url = jdbc:mysql://localhost/vendas?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username = root
-spring.datasource.password =
+spring.datasource.password = 
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
